@@ -617,6 +617,9 @@ Release 0.20.1 - Unreleased
     KILLED (this used to happen when the SetupTask would come back with a 
     success after the job has been killed). (Amar Kamat via ddas)
 
+    HADOOP-5641. Fix a NullPointerException in capacity scheduler's memory
+    based scheduling code when jobs get retired. (yhemanth)
+
 Release 0.20.0 - 2009-04-15
 
   INCOMPATIBLE CHANGES
